# example_programs_in_D

./: .gitmodules  README.md
call_D_library_from_bun/: README.md  index.ts  package.json
calling_a_D_library_from_go/: building.sh  hello.go
calling_rust_from_D/: Readme.md  dub.json
colorize/: README.md  dub.json  xmake.lua
create_Excel_spreadsheet/: dub.json
creating_a_library_using_dub/: dub.json  dub.json~
date_manipulations/: .gitignore  dub.json
duktape-console/: dub.json  example.js
example_primes/: dub.json
excecuting_a_command/: my_doc.tex
hash/: dub.json
hello_with_printf/: dub.json
login_example/: dub.json
login_example-mustache/: README.md  dub.json
lua_console/: dub.json
normalize_number/: dub.json  run_tests.sh
read_csv/: dub.json  tabla.txt
running_latex/: dub.json
serialize_fixed_to_Json/: dub.json
serialize_to_Json_using_vibe/: dub.json
serialize_with_policy/: dub.json
simulacion_truco2/: dub.json
test_ddbc_select/: .gitignore  dub.json  dub.selections.json  results_with_mariadb.txt  results_with_mariadb_shell.txt  results_with_sqlite.txt  testdb.sqlite
test_ddbc_select_2/: .gitignore  results_with_mariadb.txt  results_with_mariadb_shell.txt  results_with_sqlite.txt
test_mysql_native/: .gitignore  dub.json  test_output.txt
test_silly/: dub.json
use_lua/: dub.json
using_a_shared_C_library/: dub.json  run.sh
using_a_static_C_library/: .gitignore  dub.json
using_libmatheval_from_D/: .gitignore  dub.json
using_malloc/: dub.json
using_sqlite/: dub.json  meson.build
using_sqlite/source/: app.d
(+69 files in other folders)
